Codepen Pizza Combinator Works

--- a/index.html
+++ b/index.html
@@ -4,76 +4,80 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Limelight&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/9c2c348e64.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
 </head>
 <body>
+  
+<nav>
+  <a id="logo" href="#">Tre Signori</a>
+  <a href="#">Contact Us</a>
+  <p><i class="fas fa-search"></i><input type="search" placeholder="search"></p>
+  <i class="fas fa-shopping-cart"></i>
+</nav>
 
-  <nav>
-    <a id="logo" href="#">Tre Signori</a>
-    <a href="#">Contact Us</a>
-    <p><i class="fas fa-search"></i><input type="search" placeholder="search"></p>
-    <i class="fas fa-shopping-cart"></i>
-  </nav>
-
-  <main>
-  <div class="place-mat">
-    <div class="plate">
-      <div class="pizza">
-        <div class="sauce" style="visibility:hidden">
-          <div class="cheese" style="visibility:hidden">
-            <img id="ing1" src="#" alt="topping" style="visibility:hidden">
-            <img id="ing2" src="#" alt="topping" style="visibility:hidden">
-            <img id="ing3" src="#" alt="topping" style="visibility:hidden">
-            <img id="ing4" src="#" alt="topping" style="visibility:hidden">
-          </div>
+<main>
+<div class="place-mat">
+  <div class="plate">
+    <div class="pizza">
+      <div class="sauce" style="visibility:hidden">
+        <div class="cheese" style="visibility:hidden">
+          <img id="ing1" src="#" alt="topping" style="visibility:hidden">
+          <img id="ing2" src="#" alt="topping" style="visibility:hidden">
+          <img id="ing3" src="#" alt="topping" style="visibility:hidden">
+          <img id="ing4" src="#" alt="topping" style="visibility:hidden">
         </div>
       </div>
     </div>
   </div>
-  <aside>
+</div>
+<aside>
 
-    <h2>Menu</h2>
-    <form id="form1" action="#">
-    <h3>Dough</h3>
-    <ul>
-      <li><input id="cau" type="radio" name="dough" value="cauliflower">Cauliflower</li>
-      <li><input id="who" type="radio" name="dough" value="whole wheat">Whole Wheat</li>
-      <li><input id="tra" type="radio" name="dough" value="traditional">Traditional</li>
-    </ul>
-    </form>
-    <form id="form2">
-    <h3>Sauce</h3>
-    <ul>
-      <li><input id="cur" type="radio" name="sauce" value="curry">Curry</li>
-      <li><input id="cre" type="radio" name="sauce" value="cream">Cream</li>
-      <li><input id="mar" type="radio" name="sauce" value="marinara">Marinara</li>
-    </ul>
-    </form>
-    <form id="form3" action="#">
-      <h3>Cheese</h3>
-    <ul>
-      <li><input id="che" type="radio" name="cheese" value="cheese">Cheese</li>
-      <li><input id="noche" type="radio" name="cheese" value="cheese">No Cheese</li>
-      <li><input id="xtrche" type="radio" name="cheese" value="cheese">Extra Cheese</li>
-    </ul>
-    </form>
-    </form>
-    <form id="form4">
-    <h3>Toppings</h3>
-    <ul>
-      <li><input id="tom" type="checkbox">Tomatoes</li>
-      <li><input id="mus" type="checkbox">Mushrooms</li>
-      <li><input id="spi" type="checkbox">Spinach</li>
-      <li><input id="bac" type="checkbox">Bacon</li>
-    </ul>
-    </form>
-   </aside>
-  </main>
-  <footer>
-    <p>&copy;2020 Tre Signori</p>
-    <p>Salute!</p>
-  </footer>
+  <h2>Menu</h2>
+  <form id="form1" action="#">
+  <h3>Dough</h3>
+  <ul>
+    <li><input id="cau" type="radio" name="dough" value="cauliflower">Cauliflower</li>
+    <li><input id="who" type="radio" name="dough" value="whole wheat">Whole Wheat</li>
+    <li><input id="tra" type="radio" name="dough" value="traditional">Traditional</li>
+  </ul>
+  </form>
+  <form id="form2">
+  <h3>Sauce</h3>
+  <ul>
+    <li><input id="cur" type="radio" name="sauce" value="curry">Curry</li>
+    <li><input id="cre" type="radio" name="sauce" value="cream">Cream</li>
+    <li><input id="mar" type="radio" name="sauce" value="marinara">Marinara</li>
+  </ul>
+  </form>
+  <form id="form3" action="#">
+    <h3>Cheese</h3>
+  <ul>
+    <li><input id="che" type="radio" name="cheese" value="cheese">Cheese</li>
+    <li><input id="noche" type="radio" name="cheese" value="cheese">No Cheese</li>
+    <li><input id="xtrche" type="radio" name="cheese" value="cheese">Extra Cheese</li>
+  </ul>
+  </form>
+  </form>
+  <form id="form4">
+  <h3>Toppings</h3>
+  <ul>
+    <li><input id="spi" type="checkbox">Spinach</li>
+    <li><input id="tom" type="checkbox">Tomatoes</li>
+    <li><input id="bac" type="checkbox">Bacon</li>
+    <li><input id="mus" type="checkbox">Mushrooms</li>
+  </ul>
+  </form>
+ </aside>
+</main>
+<footer>
+  <p>&copy;2020 Tre Signori</p>
+  <p>Salute!</p>
+</footer>
 <script src="index.js"></script>
 </body>
 </html>
