--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </div>
     </div>
   </div>
-  <aside>
 
+  <aside>
     <h2>Buongiorno! How would you like your pizza?</h2>
     <form id="form1" action="#">
     <h3>Dough</h3>
@@ -72,8 +72,9 @@
       <li><input id="mus" type="checkbox">Mushrooms</li>
     </ul>
     </form>
-    <h3 id="price-display">Price: $5.00<h3/>
-   </aside>
+    <h3 id="price-display">Price: $5.00 </h3>
+  </aside>
+
   </main>
   <footer>
     <p>&copy;2020 Tre Signori</p>
